docs/api/qiskit/1.2/qiskit.pulse.instructions.TimeBlockade.mdx
---
title: TimeBlockade (v1.2)
description: API reference for qiskit.pulse.instructions.TimeBlockade in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.instructions.TimeBlockade
---

# TimeBlockade

<Class id="qiskit.pulse.instructions.TimeBlockade" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/pulse/instructions/directives.py#L61-L151" signature="qiskit.pulse.instructions.TimeBlockade(duration, channel, name=None)" modifiers="class">
  Bases: `Directive`

  Pulse `TimeBlockade` directive.

  This instruction is intended to be used internally within the pulse builder, to convert [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") into [`ScheduleBlock`](qiskit.pulse.ScheduleBlock "qiskit.pulse.ScheduleBlock"). Because [`ScheduleBlock`](qiskit.pulse.ScheduleBlock "qiskit.pulse.ScheduleBlock") cannot take an absolute instruction time interval, this directive helps the block representation to find the starting time of an instruction.

  **Example**

  This schedule plays constant pulse at t0 = 120.

  ```python
  from qiskit.pulse import Schedule, Play, Constant, DriveChannel

  schedule = Schedule()
  schedule.insert(120, Play(Constant(10, 0.1), DriveChannel(0)))
  ```

  This schedule block is expected to be identical to above at a time of execution.

  ```python
  from qiskit.pulse import ScheduleBlock, Play, Constant, DriveChannel
  from qiskit.pulse.instructions import TimeBlockade

  block = ScheduleBlock()
  block.append(TimeBlockade(120, DriveChannel(0)))
  block.append(Play(Constant(10, 0.1), DriveChannel(0)))
  ```

  Such conversion may be done by

  ```python
  from qiskit.pulse.transforms import block_to_schedule, remove_directives

  schedule = remove_directives(block_to_schedule(block))
  ```

  <Admonition title="Note" type="note">
    The TimeBlockade instruction behaves almost identically to [`Delay`](qiskit.pulse.instructions.Delay "qiskit.pulse.instructions.Delay") instruction. However, the TimeBlockade is just a compiler directive and must be removed before execution. This may be done by [`remove_directives()`](pulse#qiskit.pulse.transforms.remove_directives "qiskit.pulse.transforms.remove_directives") transform. Once these directives are removed, occupied timeslots are released and user can insert another instruction without timing overlap.
  </Admonition>

  Create a time blockade directive.

  **Parameters**

  *   **duration** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Length of time of the occupation in terms of dt.
  *   **channel** (*chans.Channel*) – The channel that will be the occupied.
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – Name of the time blockade for display purposes.

  ## Attributes

  ### channel

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.channel">
    Return the [`Channel`](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on.
  </Attribute>

  ### channels

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.channels">
    Returns the channels that this schedule uses.
  </Attribute>

  ### duration

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.duration">
    Duration of this instruction.
  </Attribute>

  ### id

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.id">
    Unique identifier for this instruction.
  </Attribute>

  ### instructions

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.instructions">
    Iterable for getting instructions from Schedule tree.
  </Attribute>

  ### name

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.name">
    Name of this instruction.
  </Attribute>

  ### operands

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.operands">
    Return instruction operands.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.parameters">
    Parameters which determine the instruction behavior.
  </Attribute>

  ### start\_time

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.start_time">
    Relative begin time of this instruction.
  </Attribute>

  ### stop\_time

  <Attribute id="qiskit.pulse.instructions.TimeBlockade.stop_time">
    Relative end time of this instruction.
  </Attribute>

  ## Methods

  ### append

  <Function id="qiskit.pulse.instructions.TimeBlockade.append" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/pulse/instructions/instruction.py#L185-L198" signature="append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to be appended
    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` a this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### ch\_duration

  <Function id="qiskit.pulse.instructions.TimeBlockade.ch_duration" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/pulse/instructions/instruction.py#L112-L118" signature="ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** ([*Channel*](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")) – Supplied channels

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")
  </Function>

  ### ch\_start\_time

  <Function id="qiskit.pulse.instructions.TimeBlockade.ch_start_time" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/pulse/instructions/instruction.py#L120-L127" signature="ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** ([*Channel*](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")) – Supplied channels

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")
  </Function>

  ### ch\_stop\_time

  <Function id="qiskit.pulse.instructions.TimeBlockade.ch_stop_time" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/pulse/instructions/instruction.py#L129-L137" signature="ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** ([*Channel*](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")) – Supplied channels

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")
  </Function>

  ### insert

  <Function id="qiskit.pulse.instructions.TimeBlockade.insert" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/pulse/instructions/instruction.py#L167-L183" signature="insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Time to insert the schedule schedule
    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to insert
    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` inserted with this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### is\_parameterized

  <Function id="qiskit.pulse.instructions.TimeBlockade.is_parameterized" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/pulse/instructions/instruction.py#L219-L221" signature="is_parameterized()">
    Return True iff the instruction is parameterized.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>

  ### shift

  <Function id="qiskit.pulse.instructions.TimeBlockade.shift" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/pulse/instructions/instruction.py#L151-L165" signature="shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Time to shift by
    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – Name of the new schedule. Defaults to name of self

    **Returns**

    The shifted schedule.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>
</Class>

